2008-01-22  Andy Buckley  <andy@insectnation.org>

	* Beam projection now uses HepMC GenEvent::beam_particles() method
	to get the beam particles. This is more portable and robust for
	C++ generators, and equivalent to the existing "first two" method
	for Fortran generators.

2008-01-17  Andy Buckley  <andy@insectnation.org>

	* Added angle range fix to pseudorapidity function (thanks to
	Piergiulio Lenzi).

2008-01-10  Andy Buckley  <andy@insectnation.org>

	* Changed autobooking plot codes to use zero-padding (gets the
	order right in JAS, file browser, ROOT etc.). Also changed the
	'ds' part to 'd' for consistency. HepData's AIDA output has been
	correspondingly updated, as have the bundled data files.

2008-01-04  Andy Buckley  <andy@insectnation.org>

	* Tidied up JetShape projection a bit, including making the
	constructor params const references. This seems to have sorted the
	runtime segfault in the CDF_2005 analysis.

	* Added caching of the analysis bin edges from the AIDA file -
	each analysis object will now only read its reference file once,
	which massively speeds up the rivetgun startup time for analyses
	with large numbhers of autobooked histos (e.g. the
	DELPHI_1996_S3430090 analysis).

2008-01-02  Andy Buckley  <andy@insectnation.org>

	* CDF_2001_S4751469 now uses the LossyFinalState projection, with
	an 8% loss rate.

	* Added LossyFinalState and HadronicFinalState, and fixed a
	"polarity" bug in the charged final state projection (it was
	keeping only the *uncharged* particles).

	* Now using isatty(1) to determine whether or not color escapes
	can be used. Also removed --color argument, since it can't have an
	effect (TCLAP doesn't do position-based flag toggling).

	* Made Python extension build optional (and disabled by default).

2008-01-01  Andy Buckley  <andy@insectnation.org>

	* Removed some unwanted DEBUG statements, and lowered the level of
	some infrastructure DEBUGs to TRACE level.

	* Added bash color escapes to the logger system.
