@@ -21,7 +21,7 @@ namespace Rivet {
 
     // Thrusts
     const Thrust& thrustC = e.applyProjection(_cthrustproj);
-      _hist1MinusTC->fill(1 - thrustC.thrust(), weight); 
+    _hist1MinusTC->fill(1 - thrustC.thrust(), weight); 
     _hist1MinusTC->fill(1 - thrustC.thrust(), weight); 
     _histTMajorC->fill(thrustC.thrustMajor(), weight); 
     _histTMinorC->fill(thrustC.thrustMinor(), weight); 
@@ -113,16 +113,17 @@ namespace Rivet {
       // Get momenta components w.r.t. thrust and sphericity.
       const double momT = dot(thrustC.thrustAxis(), mom3);
       const double momS = dot(sphericityC.sphericityAxis(), mom3);
+      const double pT = mom3.polarRadius();
       const double pTinT = dot(mom3, thrustC.thrustMajorAxis());
       const double pToutT = dot(mom3, thrustC.thrustMinorAxis());
       const double pTinS = dot(mom3, sphericityC.sphericityMajorAxis());
       const double pToutS = dot(mom3, sphericityC.sphericityMinorAxis());
-      _histPtTInC->fill(pTinT/GeV, weight);
-      _histPtTOutC->fill(pToutT/GeV, weight);
-      _histPtSInC->fill(pTinS/GeV, weight);
-      _histPtSOutC->fill(pToutS/GeV, weight);
-      _histPtTInVsXp->fill(scaledMom, pTinT/GeV, weight);
-      _histPtTOutVsXp->fill(scaledMom, pToutT/GeV, weight);
+      _histPtTInC->fill(fabs(pTinT/GeV), weight);
+      _histPtTOutC->fill(fabs(pToutT/GeV), weight);
+      _histPtSInC->fill(fabs(pTinS/GeV), weight);
+      _histPtSOutC->fill(fabs(pToutS/GeV), weight);
+      _histPtVsXp->fill(scaledMom, fabs(pT/GeV), weight);
+      _histPtTOutVsXp->fill(scaledMom, fabs(pToutT/GeV), weight);
 
       // Calculate rapidities w.r.t. thrust and sphericity.
       const double rapidityT = 0.5 * std::log((energy + momT) / (energy - momT));
@@ -148,10 +149,10 @@ namespace Rivet {
       const double pToutT = dot(mom3, thrustCN.thrustMinorAxis());
       const double pTinS = dot(mom3, sphericityCN.sphericityMajorAxis());
       const double pToutS = dot(mom3, sphericityCN.sphericityMinorAxis());
-      _histPtTInCN->fill(pTinT/GeV, weight);
-      _histPtTOutCN->fill(pToutT/GeV, weight);
-      _histPtSInCN->fill(pTinS/GeV, weight);
-      _histPtSOutCN->fill(pToutS/GeV, weight);
+      _histPtTInCN->fill(fabs(pTinT/GeV), weight);
+      _histPtTOutCN->fill(fabs(pToutT/GeV), weight);
+      _histPtSInCN->fill(fabs(pTinS/GeV), weight);
+      _histPtSOutCN->fill(fabs(pToutS/GeV), weight);
 
       // Calculate rapidities w.r.t. thrust and sphericity.
       const double rapidityT = 0.5 * std::log((energy + momT) / (energy - momT));
@@ -161,7 +162,6 @@ namespace Rivet {
     }
     const size_t numParticlesCN = cfsCN.particles().size();
     _weightedTotalPartNumCN += numParticlesCN * weight;
-
 
     // Finished...
     log << Log::DEBUG << "Finished analyzing" << endl;
@@ -188,7 +188,7 @@ namespace Rivet {
     _histLogScaledMom = bookHistogram1D(8, 1, 1, "Log of scaled momentum, log(1/x_p) (charged)");
 
     _histPtTOutVsXp   = bookProfile1D(9,  1, 1, "Mean out-of-plane p_T in GeV w.r.t. thrust axes vs. x_p (charged)"); // binned in Xp
-    _histPtTInVsXp    = bookProfile1D(10, 1, 1, "Mean in-plane p_T in GeV w.r.t. thrust axes vs. x_p (charged)"); // binned in Xp
+    _histPtVsXp       = bookProfile1D(10, 1, 1, "Mean p_T in GeV vs. x_p (charged)"); // binned in Xp
 
     _hist1MinusTC     = bookHistogram1D(11, 1, 1, "1-thrust, 1-T (charged)");
     _hist1MinusTCN    = bookHistogram1D(11, 1, 2, "1-thrust, 1-T (charged and neutral)");
